# Text-Summarizer

./: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.ipynb
app/: __init__.py  app.py  routes.py
app/templates/: index.html  summary.html
crud/: summary_crud.py
docker/volume_mysql/: binlog.000004
download_model/: download.py
load_model/: load.py
models/: summaries.py  summary.py
services/: summarize_and_capitalize.py
